--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -15,6 +15,7 @@
       "Segoe UI Symbol", sans-serif;
     font-size: 1.5rem; 
     font-weight: bold; 
+    color:white;
   }
 }
 
