--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,3 +23,17 @@ body {
   70% { transform: scale(.9); }
   100% { transform: scale(1); }
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: var(--main-color);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--accent-color);
+}
